[project]
name = "payment-service"
version = "0.1.0"
description = "Asynchronous payment processing microservice: FastAPI, RabbitMQ (FastStream), transactional outbox"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.16",
    "asyncpg>=0.31",
    "fastapi>=0.115",
    "faststream[rabbit]>=0.7,<0.8",
    "httpx>=0.28",
    "pydantic>=2.12",
    "pydantic-settings>=2.10",
    "sqlalchemy[asyncio]>=2.0.43,<2.1",
    "structlog>=25.1",
    "uvicorn>=0.35",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.4",
    "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async (blocking calls in async code)
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "D",     # pydocstyle
    "DTZ",   # flake8-datetimez (naive datetimes)
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "PERF",  # perflint
    "PL",    # pylint
    "PTH",   # flake8-use-pathlib
    "RET",   # flake8-return
    "RUF",   # ruff-specific
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D", "ANN", "PLR2004"]
"migrations/**" = ["D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-m 'not e2e'"
markers = [
    "e2e: full-stack tests that require the docker compose environment",
]

[tool.uv]
package = true
